--- a/bin/main/templates/inventoryMaster/inventoryMasterList.html
+++ b/bin/main/templates/inventoryMaster/inventoryMasterList.html
@@ -23,10 +23,14 @@
             <span th:text="${errorMessage}"></span>
         </div>
 
-        <div class="mb-4">
+        <div class="mb-4 flex gap-3">
             <a th:href="@{/inventoryMaster/inventoryMasterForm(companyId=${companyId}, siteId=${siteId})}"
                class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">
                 Add New Inventory
+            </a>
+            <a th:href="@{/inventoryMaster/inventoryIoHistory(companyId=${companyId}, siteId=${siteId})}"
+               class="px-4 py-2 bg-green-600 text-white rounded hover:bg-green-700">
+                Inventory I/O
             </a>
         </div>
 
