--- a/bin/main/templates/layout/defaultLayout.html
+++ b/bin/main/templates/layout/defaultLayout.html
@@ -110,6 +110,7 @@
           <ul class="submenu hidden pl-7 mt-1 space-y-1">
             <li><a th:href="@{/inventoryMaster/inventoryMasterForm}" class="block py-1 hover:text-yellow-300">입력</a></li>
             <li><a th:href="@{/inventoryMaster/inventoryMasterList}" class="block py-1 hover:text-yellow-300">목록</a></li>
+            <li><a th:href="@{/inventoryMaster/inventoryIoHistory}" class="block py-1 hover:text-yellow-300">입출고</a></li>
           </ul>
         </li>
 
@@ -123,8 +124,8 @@
             <i class="fas fa-chevron-down"></i>
           </button>
           <ul class="submenu hidden pl-7 mt-1 space-y-1">
-            <li><a th:href="@{/common/commonForm}" class="block py-1 hover:text-yellow-300">입력</a></li>
-            <li><a th:href="@{/common/commonList}" class="block py-1 hover:text-yellow-300">목록</a></li>
+            <li><a th:href="@{/common/commonCodeForm}" class="block py-1 hover:text-yellow-300">입력</a></li>
+            <li><a th:href="@{/common/commonCodeList}" class="block py-1 hover:text-yellow-300">목록</a></li>
           </ul>
         </li>
 
