--- a/src/main/resources/templates/plantMaster/plantMasterForm.html
+++ b/src/main/resources/templates/plantMaster/plantMasterForm.html
@@ -30,7 +30,7 @@
                 <div class="grid grid-cols-12 gap-4">
                     <div class="col-span-4">
                         <label for="plantId" class="block text-sm font-medium">Plant ID</label>
-                        <input type="text" id="plantId" class="mt-1 block w-full border-gray-300 rounded" readonly disabled />
+                        <input type="text" id="plantId" th:field="*{plantId}" class="mt-1 block w-full border-gray-300 rounded" readonly disabled />
                     </div>
                     <div class="col-span-8">
                         <label for="plantName" class="block text-sm font-medium">Plant Name</label>
