--- a/src/main/resources/templates/layout/defaultLayout.html
+++ b/src/main/resources/templates/layout/defaultLayout.html
@@ -124,8 +124,8 @@
             <i class="fas fa-chevron-down"></i>
           </button>
           <ul class="submenu hidden pl-7 mt-1 space-y-1">
-            <li><a th:href="@{/common/commonCodeForm}" class="block py-1 hover:text-yellow-300">입력</a></li>
-            <li><a th:href="@{/common/commonCodeList}" class="block py-1 hover:text-yellow-300">목록</a></li>
+            <li><a th:href="@{/commonCode/form}" class="block py-1 hover:text-yellow-300">입력</a></li>
+            <li><a th:href="@{/commonCode/list}" class="block py-1 hover:text-yellow-300">목록</a></li>
           </ul>
         </li>
 
